<resources>
    <string name="app_name">CarPay</string>
    <string name="action_settings">Настройки</string>
    <string name="action_reset_all_var">Reset all var</string>
    <string name="delete_from_table">Delete from table</string>
    <string name="debt">Долг</string>
    <string name="payButton">Оплатить</string>
    <string name="action_history">История платежей</string>
    <string name="first_start_date_picker">Выберите начало неоплаченного периода</string>
    <string name="text_view_start_date_picker">Нажмите для выбора даты</string>
    <string name="first_start_rate_picker">Введите стоимость одного дня</string>
    <string name="first_start_app_save_button">Сохранить</string>
    <string name="start_activity_title">Первоначальные настройки</string>
    <string name="free_day_text_view">Бесплатные дни</string>
    <string name="to_pay_text_view">К оплате:</string>
    <string name="pay_history_text_view">История платежей</string>
</resources>
