<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ikozyrev.carpay.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        android:title="@string/action_help"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_reset_all_var"
        android:orderInCategory="100"
        android:title="@string/action_reset_all_var"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete_from_table"
        android:orderInCategory="100"
        android:title="@string/delete_from_table"
        app:showAsAction="never" />
</menu>
