<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ikozyrev.carpay.FirstStartAppActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/start_activity_title"
            android:id="@+id/startActivityTitle"
            android:layout_gravity="center_horizontal"
            android:textSize="23sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/first_start_date_picker"
            android:id="@+id/firstDateTxtView"
            android:autoText="false"
            android:textSize="15sp"
            android:textIsSelectable="false"
            android:layout_marginTop="40dp"
            android:textColor="@color/abc_primary_text_disable_only_material_light"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_view_start_date_picker"
            android:id="@+id/dataPickerTextView"
            android:layout_gravity="center_horizontal"
            android:textSize="23sp"
            android:layout_marginTop="15dp"
            android:singleLine="false"
            android:clickable="true"
            android:background="@android:drawable/editbox_dropdown_light_frame"
            android:padding="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/first_start_rate_picker"
            android:id="@+id/rateTitleTextView"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="70dp"
            android:textSize="17sp"
            android:textColor="@color/abc_primary_text_material_light" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:ems="10"
            android:id="@+id/ratePIckerEditText"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/first_start_app_save_button"
            android:id="@+id/firstStartAppSaveButton"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="70dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />
    </LinearLayout>
</RelativeLayout>
